--- a/src/Components/EventsComponent/robo.scss
+++ b/src/Components/EventsComponent/robo.scss
@@ -1,5 +1,5 @@
 $amarelo: #2fb3ff;
-$preto: black;
+$preto: rgb(41, 41, 41);
 $amarelo-claro: #e1edf3;
 $azul: #005e7d;
 $azul2: #003948;
@@ -7,6 +7,9 @@ $azul-escuro: #001e2c;
 $branco: white;
 $clouds: rgba(236, 240, 241, 1.0);
 $vermelho: rgba(192, 57, 43, 1.0);
+$lighting1: #60e660;
+$lighting2: #459945;
+$lighting3: #2d612d;
 $roboto: 'Roboto',
 sans-serif;
 .robo {
@@ -28,6 +31,9 @@ sans-serif;
         -webkit-box-sizing: border-box;
         -o-box-sizing: border-box;
     }
+    .invert {
+        filter: invert(1);
+    }
     #head {
         width: 100%;
         height: 100px;
@@ -41,6 +47,7 @@ sans-serif;
             border-radius: 100%;
             background: $preto;
             z-index: 10;
+            transform: scale(0.7);
             // animation: eyeAnimation 2s infinite;
             /*circulo branco do olho maior*/
             &::after {
@@ -76,6 +83,7 @@ sans-serif;
             border-radius: 100%;
             background: $amarelo;
             z-index: -1;
+            transform: scale(0.8);
         }
         & .olho {
             position: relative;
@@ -86,6 +94,7 @@ sans-serif;
             margin: 0 auto;
             background: $amarelo-claro;
             z-index: -2;
+            transform: scale(0.7);
         }
         & .borda-olho {
             position: relative;
@@ -96,6 +105,7 @@ sans-serif;
             margin: 0 auto;
             background: $azul-escuro;
             z-index: -3;
+            transform: scale(0.7);
         }
         & .head {
             margin: 0 auto;
@@ -111,7 +121,7 @@ sans-serif;
         }
         & .antena {
             position: relative;
-            bottom: 730px;
+            bottom: 700px;
             width: 5px;
             height: 100px;
             margin: 0 auto;
@@ -147,7 +157,7 @@ sans-serif;
             &::before {
                 display: block;
                 position: relative;
-                top: 145px;
+                top: 155px;
                 left: 20px;
                 width: 20px;
                 height: 20px;
@@ -157,10 +167,13 @@ sans-serif;
                 box-shadow: 40px 0 0 $azul, 80px 0 0 $azul-escuro;
             }
         }
+        & .peito.lighting::before {
+            animation: lighting 0.6s infinite;
+        }
         & .tela {
             margin: 0 auto;
             width: 100px;
-            height: 60px;
+            height: 90px;
             line-height: 45px;
             background: $azul-escuro;
             border-radius: 5px;
@@ -171,6 +184,15 @@ sans-serif;
             font-family: $roboto;
             font-weight: bold;
             letter-spacing: 2px;
+            display: flex;
+            img {
+                width: 85%;
+                height: 85%;
+                margin: auto;
+                object-fit: cover;
+                object-position: center;
+                // filter: invert(1);
+            }
         }
     }
     .leg {
@@ -194,7 +216,7 @@ sans-serif;
             height: 40px;
             top: 10px;
             border-radius: 80%;
-            background: rgba(0, 0, 0, .3);
+            background: rgba(26, 25, 25, 0.3);
             animation: shadow 3s infinite;
         }
     }
@@ -212,14 +234,15 @@ sans-serif;
         transform-origin: right;
         & .antebraco-esquerdo {
             position: absolute;
-            right: 45%;
-            top: -475%;
+            right: 105%;
+            top: -85%;
             width: 100px;
             height: 40px;
-            background: red;
-            transition: all 0.3s;
+            transition: all 0.8s;
             z-index: 100;
+            transform-origin: 110% 50%;
             transform: rotate(90deg);
+            transition-delay: 0.1s;
             border-radius: 5px;
             background: $amarelo;
             /*mao*/
@@ -251,7 +274,7 @@ sans-serif;
             display: block;
             position: relative;
             top: -1px;
-            left: -2px;
+            left: -5px;
             width: 18px;
             height: 18px;
             border-radius: 100%;
@@ -264,21 +287,26 @@ sans-serif;
     .moveHand2 {
         animation: moveHand2 5s infinite;
     }
+    .swingLeftLower {
+        top: 100% !important;
+        right: 100% !important;
+        transform-origin: right !important;
+    }
     .switchHand1a {
         transform-origin: unset !important;
         transform: rotate(-20deg) !important;
     }
     .switchHand1b {
-        transform-origin: unset !important;
+        // transform-origin: unset !important;
         transform: rotate(-90deg) !important;
-        top: 318% !important;
+        // top: 318% !important;
     }
     .switchHand2a {
         transform-origin: left !important;
     }
     .switchHand2b {
-        top: -488% !important;
-        transform: rotate(90deg) !important;
+        // top: -488% !important;
+        transform: rotate(-270deg) !important;
     }
     .braco-direito {
         position: relative;
@@ -290,19 +318,21 @@ sans-serif;
         transition: all 0.3s;
         background: $amarelo-claro;
         z-index: -1;
-        transform: rotate(30deg);
+        // transform-origin: left;
+        transform: rotate(25deg);
         & .antebraco-direito {
             position: absolute;
-            right: -55%;
-            top: 318%;
+            top: -80%;
             width: 100px;
             height: 40px;
             background: red;
             z-index: 100;
             transition: all 0.3s;
             transform: rotate(-90deg);
+            transform-origin: 110% 50%;
             border-radius: 5px;
             background: $amarelo;
+            transition-delay: 0.3s;
             /*mao*/
             &::after {
                 width: 40px;
@@ -456,5 +486,29 @@ sans-serif;
         100% {
             transform: scaleX(1);
         }
+    }
+    @keyframes lighting {
+        0% {
+            background-color: $lighting1;
+            box-shadow: 40px 0 0 $lighting2, 80px 0 0 $lighting3;
+        }
+        33% {
+            background-color: $lighting3;
+            box-shadow: 40px 0 0 $lighting1, 80px 0 0 $lighting2;
+        }
+        66% {
+            background-color: $lighting2;
+            box-shadow: 40px 0 0 $lighting3, 80px 0 0 $lighting1;
+        }
+        100% {
+            background-color: $lighting1;
+            box-shadow: 40px 0 0 $lighting2, 80px 0 0 $lighting3;
+        }
+    }
+}
+
+@media (max-width: 1200px) {
+    .robo {
+        display: none;
     }
 }
