--- a/src/Components/EventsComponent/animation.css
+++ b/src/Components/EventsComponent/animation.css
@@ -1,31 +1,112 @@
 .eve-anim {
-    min-height: 95vh;
-    width: 80%;
-    margin: auto;
-    padding-top: 0px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-grid-columns: 1fr 1.5fr 1fr;
-    grid-template-columns: 1fr 1.5fr 1fr;
+  min-height: 95vh;
+  width: 80%;
+  margin: auto;
+  padding-top: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: 1fr 1.5fr 1fr;
+      grid-template-columns: 1fr 1.5fr 1fr;
 }
 
 .eve-anim .events-grid {
-    display: -ms-grid;
-    display: grid;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -ms-grid-columns: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 120px 120px 120px;
-    grid-template-rows: repeat(3, 120px);
-    padding: 50px 0;
-    grid-gap: 40px;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: (120px)[3];
+      grid-template-rows: repeat(3, 120px);
+  padding: 50px 0;
+  grid-gap: 40px;
 }
 
+.eve-anim .roboWrap {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-rows: 1fr 10fr;
+      grid-template-rows: 1fr 10fr;
+}
 
+.eve-anim .roboWrap .roboMsg {
+  background-color: #001e2c;
+  width: 70%;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: auto;
+  border: 5px solid #2fb3ff;
+  border-radius: 2px;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
+  opacity: 0;
+}
+
+.eve-anim .roboWrap .roboMsg #Robotext {
+  color: #12f57c;
+  padding: 7px;
+}
+
+.eve-anim .roboWrap .slide-up {
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+  opacity: 1;
+}
+
+.eve-anim .red {
+  background-color: red;
+}
+
+@media (max-width: 1200px) {
+  .eve-anim {
+    width: 95%;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    grid-column-gap: 100px;
+  }
+}
+
+@media (max-width: 800px) {
+  .eve-anim {
+    width: 85%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    grid-column-gap: 100px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .eve-anim .roboWrap {
+    display: none;
+  }
+}
 /*# sourceMappingURL=animation.css.map */
