--- a/src/Components/EventsComponent/eventCard.scss
+++ b/src/Components/EventsComponent/eventCard.scss
@@ -4,29 +4,41 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        background-color: white;
         // background-color: rgb(197, 149, 59);
         // filter: invert(1);
-        border-radius: 15px;
         width: 130px;
         margin: 0 auto;
-        padding: 20px 0;
         transition: all 0.3s;
         box-shadow: 0px 0px 8px rgb(19, 19, 19);
         // grid-template-rows: 3fr 2fr;
         cursor: pointer;
-        img {
-            height: 80%;
-            margin: auto;
-        }
-        h5 {
-            align-items: center;
-            font-size: 15px;
-            text-align: center;
-            margin: auto 0;
-        }
-        &:hover {
-            transform: scale(1.1);
+        div {
+            height: 100%;
+            width: 100%;
+            display: flex;
+            position: relative;
+            padding: 20px 0;
+            flex-direction: column;
+            background-color: white;
+            justify-content: center;
+            transition: transform 0.3s;
+            border-radius: 15px;
+            img {
+                height: 80%;
+                margin: auto;
+                pointer-events: none;
+            }
+            h5 {
+                align-items: center;
+                font-size: 15px;
+                text-align: center;
+                margin: auto 0;
+                pointer-events: none;
+            }
+            &:hover {
+                transform: scale(1.1);
+            }
+             :after {}
         }
     }
     .fadeOut1 {
@@ -45,5 +57,116 @@
     }
     .hide {
         display: none;
+    }
+    .detect {
+        border-width: 3px !important;
+        border-style: solid !important;
+        border-color: transparent;
+        border-radius: 0 !important;
+        span.corner {
+            animation: blink 1.8s;
+        }
+        span.corner:before {
+            position: absolute;
+            content: '';
+            height: 2px;
+            background-color: cyan;
+            width: 25%;
+        }
+        span.corner::after {
+            position: absolute;
+            content: '';
+            width: 2px;
+            background-color: cyan;
+            height: 25%;
+        }
+        span.corner.top:before,
+        span.corner.top::after {
+            top: -7%;
+        }
+        span.corner.left:before,
+        span.corner.left:after {
+            left: -7%;
+        }
+        span.corner.right:before,
+        span.corner.right:after {
+            right: -7%;
+        }
+        span.corner.bottom:before,
+        span.corner.bottom:after {
+            bottom: -7%;
+        }
+    }
+    .detect span#scanner {
+        content: '';
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 3px;
+        width: 100%;
+        background-color: cyan;
+        position: absolute;
+        animation: scan 1.8s ease-in;
+    }
+    .detect.red {
+        border-color: red;
+    }
+    .detect.blue {
+        border-color: blue;
+    }
+    .detect.green {
+        border-color: green;
+    }
+    .detect.green::after {
+        content: 'EVENT';
+        width: fit-content;
+        background-color: rgb(9, 255, 0);
+        position: absolute;
+        font-size: 10px;
+        bottom: -10%;
+        right: 0;
+        font-weight: 500;
+    }
+}
+
+@keyframes borders {
+    0% {
+        border-color: red;
+    }
+    50% {
+        border-color: blue;
+    }
+    100% {
+        border-color: red;
+    }
+}
+
+@keyframes scan {
+    0% {
+        top: 0;
+    }
+    80% {
+        top: 100%;
+    }
+    100% {
+        top: 00%;
+    }
+}
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+    25% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    75% {
+        opacity: 0;
+    }
+    80% {
+        opacity: 1;
     }
 }
