--- a/src/Components/EventsComponent/eventmodal.scss
+++ b/src/Components/EventsComponent/eventmodal.scss
@@ -97,6 +97,28 @@
                 flex-direction: column;
                 align-items: center;
             }
+            .activeTabButton {
+                background-color: blue !important;
+            }
+        }
+    }
+}
+
+@media (max-width: 1200px) {
+    .evePage {
+        .showModal1 {
+            opacity: 1 !important;
+            left: auto;
+        }
+        .showModal2 {
+            opacity: 1 !important;
+            right: auto;
+        }
+        .shiftRight {
+            right: auto;
+        }
+        .modalWrap {
+            width: 80%;
         }
     }
 }
