--- a/src/Components/EventsComponent/animation.scss
+++ b/src/Components/EventsComponent/animation.scss
@@ -1,5 +1,7 @@
 .eve-anim {
+    // min-height: 95vh;
     min-height: 95vh;
+    max-height: 95vh;
     width: 80%;
     margin: auto;
     // background-color: red;
@@ -28,7 +30,9 @@
         .roboMsg {
             background-color: #001e2c;
             width: 70%;
-            height: 100px;
+            position: relative;
+            top: 80px;
+            height: 75px;
             display: flex;
             margin: auto;
             border: 5px solid #2fb3ff;
@@ -36,9 +40,26 @@
             transform: translateY(50px);
             transition: all 0.1s;
             opacity: 0;
+            z-index: -50;
+            #RobotextWrap {
+                position: absolute;
+                width: 100%;
+                margin: auto;
+            }
             #Robotext {
                 color: #12f57c;
                 padding: 7px;
+            }
+            span {
+                height: 30px;
+                width: 20px;
+                top: 100%;
+                right: auto;
+                left: -5px;
+                border-right: 25px solid transparent;
+                border-top: 35px solid #2fb3ff;
+                bottom: 0;
+                position: relative;
             }
         }
         .slide-up {
@@ -48,6 +69,10 @@
     }
     .red {
         background-color: red;
+    }
+    .disabled {
+        background-color: red;
+        pointer-events: none;
     }
 }
 
