--- a/src/Components/EventsComponent/eventCard.css
+++ b/src/Components/EventsComponent/eventCard.css
@@ -177,6 +177,149 @@
   font-weight: 500;
 }
 
+.evePage .button {
+  border: 1px solid green;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  height: 50px;
+  width: 200px;
+  border-radius: 20px 5px 20px 0px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  font: 15px sans-serif;
+  font-weight: 300;
+  text-shadow: 0 0 20px #fff;
+  text-transform: uppercase;
+  -webkit-animation: breath2 2s 0.5s infinite alternate;
+  animation: breath2 2s 0.5s infinite alternate;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  cursor: pointer;
+}
+
+.evePage .button:before {
+  content: "";
+  display: block;
+  width: calc(100% - 22px);
+  height: calc(100% - 8px);
+  -webkit-animation: breath 2s infinite alternate;
+  animation: breath 2s infinite alternate;
+  left: 10px;
+  top: 3px;
+  position: absolute;
+  background-color: transparent;
+  border: 1px solid #fff;
+  border-radius: 15px 3px 15px 3px;
+}
+
+.evePage .button.fire {
+  border-color: #ffeca8;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 138, 48, 0.6)), to(rgba(240, 96, 29, 0.6)));
+  background-image: linear-gradient(to bottom, rgba(255, 138, 48, 0.6), rgba(240, 96, 29, 0.6));
+  -webkit-box-shadow: 0 0 70px rgba(255, 138, 48, 0.6), 0 5px 20px rgba(255, 138, 48, 0.6), inset 0 1px #ffeca8, inset 0 -1px #ffeca8;
+          box-shadow: 0 0 70px rgba(255, 138, 48, 0.6), 0 5px 20px rgba(255, 138, 48, 0.6), inset 0 1px #ffeca8, inset 0 -1px #ffeca8;
+  color: #ffeca8;
+}
+
+.evePage .button.fire:before {
+  -webkit-box-shadow: inset 0 0 30px 0 #ffeca8;
+          box-shadow: inset 0 0 30px 0 #ffeca8;
+}
+
+.evePage .button.ice {
+  border-color: #a8ecff;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(92, 161, 250, 0.5)), to(rgba(48, 108, 238, 0.5)));
+  background-image: linear-gradient(to bottom, rgba(92, 161, 250, 0.5), rgba(48, 108, 238, 0.5));
+  -webkit-box-shadow: 0 0 20px rgba(48, 138, 255, 0.5), 0 5px 20px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+          box-shadow: 0 0 20px rgba(48, 138, 255, 0.5), 0 5px 20px rgba(48, 138, 255, 0.5), inset 0 1px #a8fff8, inset 0 -1px #a8ffff;
+  color: #141414;
+}
+
+.evePage .button.ice:before {
+  -webkit-box-shadow: inset 0 0 30px 0 #a8ecff;
+          box-shadow: inset 0 0 30px 0 #a8ecff;
+}
+
+.evePage .button:hover.fire {
+  -webkit-box-shadow: 0 0 70px rgba(255, 138, 48, 0.8), 0 5px 20px rgba(255, 138, 48, 0.8), inset 0 1px #ffeca8, inset 0 -1px #ffeca8;
+          box-shadow: 0 0 70px rgba(255, 138, 48, 0.8), 0 5px 20px rgba(255, 138, 48, 0.8), inset 0 1px #ffeca8, inset 0 -1px #ffeca8;
+}
+
+.evePage .button:hover.fire:before {
+  -webkit-box-shadow: inset 0 0 50px 0 #ffeca8;
+          box-shadow: inset 0 0 50px 0 #ffeca8;
+}
+
+.evePage .button:hover.ice {
+  -webkit-box-shadow: 0 0 70px rgba(48, 138, 255, 0.8), 0 5px 20px rgba(48, 138, 255, 0.8), inset 0 1px #a8ecff, inset 0 -1px #a8ecff;
+          box-shadow: 0 0 70px rgba(48, 138, 255, 0.8), 0 5px 20px rgba(48, 138, 255, 0.8), inset 0 1px #a8ecff, inset 0 -1px #a8ecff;
+}
+
+.evePage .button:hover.ice:before {
+  -webkit-box-shadow: inset 0 0 50px 0 #a8ecff;
+          box-shadow: inset 0 0 50px 0 #a8ecff;
+}
+
+.evePage .button + .button {
+  margin-top: 15px;
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+}
+
+@-webkit-keyframes breath {
+  0% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+  100% {
+    -webkit-transform: scaleX(0.95);
+            transform: scaleX(0.95);
+  }
+}
+
+@keyframes breath {
+  0% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+  100% {
+    -webkit-transform: scaleX(0.95);
+            transform: scaleX(0.95);
+  }
+}
+
+@-webkit-keyframes breath2 {
+  0% {
+    -webkit-transform: skewX(-5deg) scaleX(1);
+            transform: skewX(-5deg) scaleX(1);
+  }
+  100% {
+    -webkit-transform: skewX(0deg) scaleX(0.95);
+            transform: skewX(0deg) scaleX(0.95);
+  }
+}
+
+@keyframes breath2 {
+  0% {
+    -webkit-transform: skewX(-5deg) scaleX(1);
+            transform: skewX(-5deg) scaleX(1);
+  }
+  100% {
+    -webkit-transform: skewX(0deg) scaleX(0.95);
+            transform: skewX(0deg) scaleX(0.95);
+  }
+}
+
 @-webkit-keyframes borders {
   0% {
     border-color: red;
