--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -14,12 +14,15 @@
 
 .evePage .modalWrap {
   position: absolute !important;
-  background-color: white;
+  background-color: #2fb3ff;
+  color: #001e2c;
   width: 40%;
   border-radius: 5px;
   opacity: 0;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+  -webkit-box-shadow: 0px 0px 15px #aee4fa;
+          box-shadow: 0px 0px 15px #aee4fa;
 }
 
 .evePage .modalWrap .modalHead {
@@ -32,7 +35,10 @@
 }
 
 .evePage .modalWrap .modalHead h3 {
+  font-weight: 600;
+  margin-top: 15px;
   padding: 20px;
+  padding-bottom: 0;
 }
 
 .evePage .modalWrap .modalHead span {
@@ -44,12 +50,14 @@
 
 .evePage .modalWrap hr {
   width: 95%;
-  border-top: 2px solid #929292;
+  border-top: 0px solid #929292;
   margin: auto;
 }
 
 .evePage .modalWrap .modalBody {
-  padding: 20px 40px;
+  background-color: #001e2c;
+  color: #FFF;
+  margin: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -109,7 +117,7 @@
 
 .evePage .modalWrap .modalBody ul.tabs li button {
   border-radius: 50%;
-  background-color: black;
+  background-color: white;
   padding: 10px;
   width: 50px;
   -webkit-transition: all 0.15s;
@@ -127,7 +135,7 @@
 }
 
 .evePage .modalWrap .modalBody ul.tabs li button i {
-  color: white;
+  color: #001e2c;
   font-size: 20px;
 }
 
@@ -154,7 +162,11 @@
 }
 
 .evePage .modalWrap .modalBody .activeTabButton {
-  background-color: blue !important;
+  background-color: #0a637e !important;
+}
+
+.evePage .modalWrap .modalBody .activeTabButton i {
+  color: white !important;
 }
 
 @media (max-width: 1200px) {
