--- a/src/Components/EventsComponent/eventmodal.scss
+++ b/src/Components/EventsComponent/eventmodal.scss
@@ -13,16 +13,23 @@
     .modalWrap {
         // position: relative !important;
         position: absolute !important;
-        background-color: white;
+        background-color: #2fb3ff;
+        color: #001e2c;
+        // background-color: white;
+        // color: rgb(6, 51, 77);
         width: 40%;
         border-radius: 5px;
         opacity: 0;
         transition: all 0.3s;
+        box-shadow: 0px 0px 15px rgb(174, 228, 250);
         .modalHead {
             display: flex;
             justify-content: center;
             h3 {
+                font-weight: 600;
+                margin-top: 15px;
                 padding: 20px;
+                padding-bottom: 0;
             }
             span {
                 position: absolute;
@@ -33,11 +40,13 @@
         }
         hr {
             width: 95%;
-            border-top: 2px solid rgb(146, 146, 146);
+            border-top: 0px solid rgb(146, 146, 146);
             margin: auto;
         }
         .modalBody {
-            padding: 20px 40px;
+            background-color: #001e2c;
+            color: #FFF;
+            margin: 20px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -70,7 +79,7 @@
                     list-style: none;
                     button {
                         border-radius: 50%;
-                        background-color: black;
+                        background-color: white;
                         padding: 10px;
                         width: 50px;
                         transition: all 0.15s;
@@ -79,7 +88,7 @@
                         align-items: center;
                         height: 50px;
                         i {
-                            color: white;
+                            color: #001e2c;
                             font-size: 20px;
                         }
                         &:hover {
@@ -98,7 +107,10 @@
                 align-items: center;
             }
             .activeTabButton {
-                background-color: blue !important;
+                background-color: #0a637e !important;
+                i {
+                    color: white !important;
+                }
             }
         }
     }
