--- a/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/EyeDea20.css
+++ b/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/EyeDea20.css
@@ -33,27 +33,45 @@
     transition-timing-function: ease-in;
 }
 
-@keyframes scale{
+@keyframes scale_ring1{
     0% { transform: scale(1); }
-  10% { transform: scale(.95); }
-  21% { transform: scale(1.05); }
-  31% { transform: scale(1); transform:rotate(0deg);}
-    70%{ transform: rotate(-100deg);}
-    100%{ transform: rotate(0deg);}
+  7% { transform: scale(.95); }
+  14% { transform: scale(1.05); }
+  21% { transform: scale(1) rotate(0deg);}
+  30%{ transform: scale(0.6) rotate(0deg);}
+    70%{ transform: scale(0.6) rotate(-100deg);}
+    100%{ transform: scale(0.6) rotate(0deg);}
+}
+@keyframes scale_ring2{
+    0% { transform: scale(1); }
+  7% { transform: scale(.95); }
+  14% { transform: scale(1.05); }
+  21% { transform: scale(1) rotate(0deg);}
+  30%{ transform: scale(0.9) rotate(0deg);}
+    70%{ transform: scale(0.9) rotate(-100deg);}
+    100%{ transform: scale(0.9) rotate(0deg);}
+}
+@keyframes scale_ring3{
+    0% { transform: scale(1); }
+  7% { transform: scale(.95); }
+  14% { transform: scale(1.05); }
+  21% { transform: scale(1) rotate(0deg);}
+  30%{ transform: scale(1.55) rotate(0deg);}
+    70%{ transform: scale(1.55) rotate(-100deg);}
+    100%{ transform: scale(1.55) rotate(0deg);}
 }
 
 .hovered_2_0_animation_ring1{
     transform-origin: 49.7% 50.6%;
-    animation: scale 2.6s linear;
+    animation: scale_ring1 4.6s linear;
 }
 .hovered_2_0_animation_ring2{
     transform-origin: 49.7% 50.6%;
-    animation: scale 2.6s linear;
-    /* display: none; */
+    animation: scale_ring2 4.6s linear;
 }
 .hovered_2_0_animation_ring3{
     transform-origin: 49.7% 50.6%;
-    animation: scale 2.6s linear;
+    animation: scale_ring3 4.6s linear;
 }
 @keyframes zooming {
     0% { transform: scale(1); 
@@ -63,15 +81,41 @@
          /* background: rgba(0,0,0,.95); */
         }
     100%{
-        transform: scale(1);
+        transform: scale(0.6);
     }
 }
 .zoom-in{
     transform-origin: 49.7% 50.6%;
-    animation: zooming 0.5s linear;
+    animation: zooming 0.55s linear;
     /* transform: scale(2); */
 }
 /* .zoom-in-image{
     transform-origin: center center;
     animation: spin-clockwise 10s infinite;
 } */
+@keyframes left_fade{
+    0%{transform: translateX(0%); opacity: 1;}
+    30%{transform: translateX(0%); opacity: 1;}
+    100%{transform: translateX(-15%); opacity: 0;}
+}
+.translate_left{
+    animation: left_fade 4.6s linear;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+@keyframes right_fade{
+    0%{transform: translateX(0%); opacity: 1;}
+    30%{transform: translateX(0%); opacity: 1;}
+    100%{transform: translateX(15%); opacity: 0;}
+}
+.translate_right{
+    animation: right_fade 4.6s linear;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
